<resources>
    <string name="app_name">iFream</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="regis">Registrarse</string>
    <string name="titulo">iFream</string>
    <string name="nombreusuario">Nombre Usuario</string>
    <string name="pass">Contraseña</string>

    <string-array name="genero">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string-array name="categoria">
        <item>Autmoviles</item>
        <item>Moda</item>
        <item>Tencologia</item>
        <item>Bricolage</item>
        <item>Arte</item>
        <item>Comida</item>
        <item>Deportes</item>
    </string-array>
    <string name="NombreUsuario">Nombre Usuario:</string>
    <string name="publis">Publicaciónes:</string>
    <string name="segui">Seguidores:</string>
    <string name="Siguie">Siguiendo:</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="eliminarYCerrar">Eliminar Perfil Y Cerrar Sesión</string>
    <string name="fechanacimi">Fecha Nacimiento</string>
    <string name="cargando">Cargando...</string>
    <string name="lik">Like</string>
    <string name="seguir">Seguir</string>
    <string name="comentarios">Comentarios</string>
    <string name="autor">Autor:</string>
    <string name="likes">Likes:</string>
</resources>
